Feat: add request for api book
